--- a/src/components2/contact.css
+++ b/src/components2/contact.css
@@ -69,7 +69,7 @@
     background: none;
     color: #50fa7b;
     font-weight: bold;
-    border: none;
+    
     outline: none;
     border-bottom: 2px solid #50fa7b;
     font-family: monospace;
@@ -78,6 +78,8 @@
     font-weight: bold;
     border-bottom-color: black;
     font-size: 1rem; /* Adjusted font size for input */
+   
+
 }
 
 /* Media Queries for responsiveness */
@@ -131,3 +133,50 @@
     font-size: 12px;
 }
 
+
+.input-field-new {
+    width: 300px;
+    padding: 5px;
+    font-size: 14px;
+    border: none;
+    border-radius: 4px;
+    position: relative;
+}
+
+.suggestions-list {
+    list-style-type: none;
+    padding-left: 0;
+    margin-top: 0;
+    border: 1px solid #ccc;
+    max-width: 300px;
+    background-color: white;
+    position: absolute;
+    z-index: 100;
+}
+
+.suggestion-item {
+    padding: 10px;
+    background-color: #fff;
+    border-bottom: 1px solid #ccc;
+    cursor: pointer;
+}
+
+.suggestion-item:last-child {
+    border-bottom: none;
+}
+
+.suggestion-item:hover {
+    background-color: #f0f0f0;
+}
+
+
+.autocomplete-suggestion {
+    font-size: 14px;
+    color: #f5efef;
+    margin-top: 5px;
+    margin-left: 180px;
+}
+
+/* Define keyframes for the fade-in effect */
+
+  
